--- a/.github/workflows/qq.yml
+++ b/.github/workflows/qq.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   run-python-script:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: checkoutss
         uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
       - name: instpython3
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11.1'
+          python-version: '3.11.0'
       - name: Commit files
         run: |
           git config --local user.email "bot@github.com"
